--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- Responsive Style Sheets -->
   <link rel="stylesheet" href="assets/css/responsive.css">
 </head>
-<body>
+<body class="loading">
   <div id="loader-overlay">
     <div class="loader">
       <div class="loader-inner"></div>
