--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="col-sm-12">
             <div class="slideshow-content">
               <p class="sub-title">Welcome to</p>
-              <h2 class="title">Kala</h2>
+              <h2 class="title"><span>K</span><span>a</span><span>l</span><span>a</span></h2>
               <p class="caption">Setion Ready Content Builder - Responsive - Premium - Muti Style - Rich Fetures - 
                 Mobile Opitmized - SEO Optimized - Fast Loading - 99/100 GTMetrix & Google Page Speed Test</p>
               <div class="action">
