--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <p class="sub-title">Welcome to</p>
               <h2 class="title"><span>K</span><span>a</span><span>l</span><span>a</span></h2>
               <p class="caption">Setion Ready Content Builder - Responsive - Premium - Muti Style - Rich Fetures - 
-                Mobile Opitmized - SEO Optimized - Fast Loading - 99/100 GTMetrix & Google Page Speed Test</p>
+                Mobile Opitmized - SEO Optimized - Fast Loading</p>
               <div class="action">
                 <a class="btn btn-gradient color-1 btn-lg btn-square" data-href-scroll href="#features" tabindex="0">Explore Features</a>
                 <a class="btn btn-gradient color-1 btn-lg btn-square" data-href-scroll href="#demos" tabindex="0">View Demos</a>
@@ -86,7 +86,7 @@
               <img class="responsive-image-02 display-block" src="assets/images/responsive-02.png" title="responsive 02"/>              
               <img class="responsive-image-04 display-block" src="assets/images/responsive-04.png" title="responsive 04"/>
             </div>
-            <p class="responsive-caption">Don’t sweat it, Stockholm is completely responsive. This means your website will looks stylish and beautiful on all devices and screens.</p>
+            <p class="responsive-caption">Don’t sweat it, KalaMarket is completely responsive. This means your website will looks stylish and beautiful on all devices and screens.</p>
           </div>
         </div>
       </div>
@@ -156,9 +156,13 @@
         <div class="row">		
           <div class="product-layout-image-content">
             <div class="product-layout-slider">
-              <img class="product-layout-image display-block" src="assets/images/product-layout-01.png" title="product layout"/>
-              <img class="product-layout-image display-block" src="assets/images/product-layout-01.png" title="product layout"/>
-              <img class="product-layout-image display-block" src="assets/images/product-layout-01.png" title="product layout"/>
+              <img class="product-layout-image display-block" src="assets/images/product-layout-1.png" title="product layout"/>
+              <img class="product-layout-image display-block" src="assets/images/product-layout-2.png" title="product layout"/>
+              <img class="product-layout-image display-block" src="assets/images/product-layout-3.png" title="product layout"/>
+              <img class="product-layout-image display-block" src="assets/images/product-layout-4.png" title="product layout"/>
+              <img class="product-layout-image display-block" src="assets/images/product-layout-5.png" title="product layout"/>
+              <img class="product-layout-image display-block" src="assets/images/product-layout-6.png" title="product layout"/>
+              <img class="product-layout-image display-block" src="assets/images/product-layout-7.png" title="product layout"/>
             </div>
           </div>
           <div class="product-layout-caption-content">
@@ -203,7 +207,7 @@
           <div class="blog-layout-image-content">
             <div class="blog-layout-slider">
               <img class="blog-layout-image display-block" src="assets/images/blog-layout-02.png" title="blog layout"/>
-              <img class="blog-layout-image display-block" src="assets/images/blog-layout-02.png" title="blog layout"/>
+              <img class="blog-layout-image display-block" src="assets/images/blog-layout-022.png" title="blog layout"/>
             </div>
           </div>
         </div>
