--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             <li><a class="page-scroll" data-href-scroll href="#features">Features</a></li>
             <li><a class="page-scroll" target="_blank" href="https://themeforshop.github.io/kalamarket-userguide/">User Guide</a></li>
             <li><a class="page-scroll" target="_blank" href="https://www.youtube.com/channel/UC38Y23j3vIX2oZgqtZH4FDA">Tutorial Videos</a></li>
-            <li><a class="page-scroll" target="_blank" href="https://kalathemes.zendesk.com/">Contact Support</a></li>            
+            <li><a class="page-scroll" target="_blank" href="https://kalathemes.zendesk.com/">Contact Support</a></li>        
+            <li><a class="page-scroll action-buynow" target="_blank" href="https://kalathemes.zendesk.com/">Buy Now</a></li>                
           </ul>
         </div>
       </div>
