--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="attr-nav hidden-xs sm-display-none">
           <ul class="social-media-dark social-top">
             <li class="search">
-              <a href="#" target="_blank" class="buy-now btn">Buy Now</a>
+              <a href="https://themeforest.net/item/kalamarket-minimal-modern-responsive-shopify-theme/33454041" target="_blank" class="buy-now btn">Buy Now</a>
             </li>
           </ul>
         </div>
@@ -47,7 +47,7 @@
             <li><a class="page-scroll" target="_blank" href="https://themeforshop.github.io/kalamarket-userguide/">User Guide</a></li>
             <li><a class="page-scroll" target="_blank" href="https://www.youtube.com/channel/UC38Y23j3vIX2oZgqtZH4FDA">Tutorial Videos</a></li>
             <li><a class="page-scroll" target="_blank" href="https://kalathemes.zendesk.com/">Contact Support</a></li>        
-            <li><a class="page-scroll action-buynow" target="_blank" href="https://kalathemes.zendesk.com/">Buy Now</a></li>                
+            <li><a class="page-scroll action-buynow" target="_blank" href="https://themeforest.net/item/kalamarket-minimal-modern-responsive-shopify-theme/33454041">Buy Now</a></li>                
           </ul>
         </div>
       </div>
@@ -87,7 +87,7 @@
               <img class="responsive-image-02 display-block" src="assets/images/responsive-02.png" title="responsive 02"/>              
               <img class="responsive-image-04 display-block" src="assets/images/responsive-04.png" title="responsive 04"/>
             </div>
-            <p class="responsive-caption">Don’t sweat it, KalaMarket is completely responsive. This means your website will looks stylish and beautiful on all devices and screens.</p>
+            <p class="responsive-caption">Don’t sweat it, Kala Market is completely responsive. This means your website will looks stylish and beautiful on all devices and screens.</p>
           </div>
         </div>
       </div>
@@ -100,50 +100,50 @@
             <h2 class="mt-0" style="background-image: url(assets/images/bkg-heading-demo.png);">Home Page</h2>
           </div>
           <div class="col-md-6 col-sm-6 col-xs-12 demo-block">
-            <a class="demo-block-wrapper" href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120379867185">
+            <a class="demo-block-wrapper" href="https://o1nbpwv4z1dgderc-4505501745.shopifypreview.com" target="blank">
               <div class="demo-item" style="background-image: url(assets/images/home-01.png);"></div>
             </a>
-            <a href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120379867185">
+            <a href="https://o1nbpwv4z1dgderc-4505501745.shopifypreview.com" target="blank">
               <h4>Demo 01</h4>
             </a>
           </div>
           <div class="col-md-6 col-sm-6 col-xs-12 demo-block">
-            <a class="demo-block-wrapper" href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120385273905">
+            <a class="demo-block-wrapper" href="https://esl7w691tzuitlx9-4505501745.shopifypreview.com" target="blank">
               <div class="demo-item" style="background-image: url(assets/images/home-02.png);"></div>
             </a>
-            <a href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120385273905">
+            <a href="https://esl7w691tzuitlx9-4505501745.shopifypreview.com" target="blank">
               <h4>Demo 02</h4>
             </a>
           </div>
           <div class="col-md-6 col-sm-6 col-xs-12 demo-block">
-            <a class="demo-block-wrapper" href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120379932721">
+            <a class="demo-block-wrapper" href="https://vl7g52putm7zbtuh-4505501745.shopifypreview.com" target="blank">
               <div class="demo-item" style="background-image: url(assets/images/home-03.png);"></div>
             </a>
-            <a href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120379932721">
+            <a href="https://vl7g52putm7zbtuh-4505501745.shopifypreview.com" target="blank">
               <h4>Demo 03</h4>
             </a>
           </div>
           <div class="col-md-6 col-sm-6 col-xs-12 demo-block">
-            <a class="demo-block-wrapper" href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120379998257">
+            <a class="demo-block-wrapper" href="https://j2lzg7wxyiam8y6d-4505501745.shopifypreview.com" target="blank">
               <div class="demo-item" style="background-image: url(assets/images/home-04.png);"></div>
             </a>
-            <a href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120379998257">
+            <a href="https://j2lzg7wxyiam8y6d-4505501745.shopifypreview.com" target="blank">
               <h4>Demo 04</h4>
             </a>
           </div>
           <div class="col-md-6 col-sm-6 col-xs-12 demo-block">
-            <a class="demo-block-wrapper" href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120385372209">
+            <a class="demo-block-wrapper" href="https://crthqdjp7us12vjj-4505501745.shopifypreview.com" target="blank">
               <div class="demo-item" style="background-image: url(assets/images/home-05.png);"></div>
             </a>
-            <a href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120385372209">
+            <a href="https://crthqdjp7us12vjj-4505501745.shopifypreview.com" target="blank">
               <h4>Demo 05</h4>
             </a>
           </div>
           <div class="col-md-6 col-sm-6 col-xs-12 demo-block">
-            <a class="demo-block-wrapper" href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120381866033">
+            <a class="demo-block-wrapper" href="https://0q2rwmk3eg9uit83-4505501745.shopifypreview.com" target="blank">
               <div class="demo-item" style="background-image: url(assets/images/home-06.png);"></div>
             </a>
-            <a href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120381866033">
+            <a href="https://0q2rwmk3eg9uit83-4505501745.shopifypreview.com" target="blank">
               <h4>Demo 06</h4>
             </a>
           </div>
@@ -400,7 +400,7 @@
                 <br><strong>launch</strong> your store <a href="">today</a>
               </p>
             </div>
-            <a class="button" href="">Purchase now</a>					
+            <a class="button" href="https://themeforest.net/item/kalamarket-minimal-modern-responsive-shopify-theme/33454041" target="_blank">Purchase now</a>					
             <div class="copyright">© 2021. All Right Reserved.</div>
           </div>
         </div>
