--- a/index.html
+++ b/index.html
@@ -100,50 +100,50 @@
             <h2 class="mt-0" style="background-image: url(assets/images/bkg-heading-demo.png);">Home Page</h2>
           </div>
           <div class="col-md-6 col-sm-6 col-xs-12 demo-block">
-            <a class="demo-block-wrapper" href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120379867185">
+            <a class="demo-block-wrapper" target="_blank" href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120379867185">
               <div class="demo-item" style="background-image: url(assets/images/home-01.png);"></div>
             </a>
-            <a href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120379867185">
+            <a target="_blank" href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120379867185">
               <h4>Demo 01</h4>
             </a>
           </div>
           <div class="col-md-6 col-sm-6 col-xs-12 demo-block">
-            <a class="demo-block-wrapper" href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120385273905">
+            <a class="demo-block-wrapper" target="_blank" href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120385273905">
               <div class="demo-item" style="background-image: url(assets/images/home-02.png);"></div>
             </a>
-            <a href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120385273905">
+            <a target="_blank" href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120385273905">
               <h4>Demo 02</h4>
             </a>
           </div>
           <div class="col-md-6 col-sm-6 col-xs-12 demo-block">
-            <a class="demo-block-wrapper" href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120379932721">
+            <a class="demo-block-wrapper" target="_blank" href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120379932721">
               <div class="demo-item" style="background-image: url(assets/images/home-03.png);"></div>
             </a>
-            <a href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120379932721">
+            <a target="_blank" href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120379932721">
               <h4>Demo 03</h4>
             </a>
           </div>
           <div class="col-md-6 col-sm-6 col-xs-12 demo-block">
-            <a class="demo-block-wrapper" href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120379998257">
+            <a class="demo-block-wrapper" target="_blank" href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120379998257">
               <div class="demo-item" style="background-image: url(assets/images/home-04.png);"></div>
             </a>
-            <a href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120379998257">
+            <a target="_blank" href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120379998257">
               <h4>Demo 04</h4>
             </a>
           </div>
           <div class="col-md-6 col-sm-6 col-xs-12 demo-block">
-            <a class="demo-block-wrapper" href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120385372209">
+            <a class="demo-block-wrapper" target="_blank" href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120385372209">
               <div class="demo-item" style="background-image: url(assets/images/home-05.png);"></div>
             </a>
-            <a href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120385372209">
+            <a target="_blank" href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120385372209">
               <h4>Demo 05</h4>
             </a>
           </div>
           <div class="col-md-6 col-sm-6 col-xs-12 demo-block">
-            <a class="demo-block-wrapper" href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120381866033">
+            <a class="demo-block-wrapper" target="_blank" href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120381866033">
               <div class="demo-item" style="background-image: url(assets/images/home-06.png);"></div>
             </a>
-            <a href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120381866033">
+            <a target="_blank" href="https://kala-bundle099.myshopify.com/?_ab=0&_fd=0&_sc=1&preview_theme_id=120381866033">
               <h4>Demo 06</h4>
             </a>
           </div>
