--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
               </p>
             </div>
             <a class="button" href="https://themeforest.net/item/kalamarket-minimal-modern-responsive-shopify-theme/33454041" target="_blank">Purchase now</a>					
-            <div class="copyright">© 2021. All Right Reserved.</div>
+            <div class="copyright">© 2021-2022. All Right Reserved.</div>
           </div>
         </div>
       </div>
